--- a/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.Pages/css/Pages.css
+++ b/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.Pages/css/Pages.css
@@ -1,1 +1,8 @@
-﻿
+﻿/*--------- persian-dnnsoftware ---------*/
+.rtl .dnn-ui-common-tooltip .tooltip-overlay .tooltip-inner::before{
+    right:unset!important;
+}
+
+.rtl ._2Xt8DULLqGSSdJBTY-9ljb .container{
+    direction:ltr!important;
+}
